# json-validator

lalrpop/: Cargo.toml
lalrpop/src/: json.lalrpop  main.rs
menhir/json_validator/: dune-project  json_validator.opam
pest/: Cargo.toml
pest/src/: json.pest  main.rs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
