[package]
name = "json_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "json_validator"
# path = "src/lib/lib.rs"

# [[bin]]
# name = "json_validator"
# path = "src/main.rs"

[dependencies]
unicode_reader = "1.0.2"
